Pass String array to runtime.exec(), not space separated string